Add session lstart/end email templates